feature/projects: add create, update, and delete project
